Show full package description on package read page.

--- a/ckanext/tess/templates/group/snippets/info.html
+++ b/ckanext/tess/templates/group/snippets/info.html
@@ -20,8 +20,8 @@
     {% block description %}
     {% if group.description %}
       <p>
-        {{ h.markdown_extract(group.description, 180) }}
-        {% link_for _('read more'), controller='group', action='about', id=group.name %}
+        {{ h.markdown_extract(group.description, 1000) }}
+        {#% link_for _('read more'), controller='group', action='about', id=group.name %#}
       </p>
     {% endif %}
     {% endblock %}
