Added button to load training material association modal

--- a/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
@@ -21,7 +21,8 @@
                 id='element-train-mat', classes=['control-full margin-bottom-0']) }}
             {{ form.select('topic', label=_('Topic'), id='element-topic', options=[{'value':'Topic 1'},{'value':'Topic 2'},{'value':'Topic 3'}], selected='Topic 1', classes=['control-full']) }}
         </div>
-        <button class="btn btn-primary pull-right" id="save_workflow_element_properties" type="submit" style="margin-top: 10px;"><i class="icon-delete"></i> Apply</button>
+            <button class="btn btn-primary pull-left" id="associate-training-materials" type="submit" style="margin-top: 10px;"><i class="icon-book"></i> Associate Material</button>
+            <button class="btn btn-primary pull-left" id="save_workflow_element_properties" type="submit" style="margin-top: 10px;"><i class="icon-save"></i> Apply</button>
         </div>
     </div>
 </div>
