Whoops. Had a mindless joke string instead of save

--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -33,7 +33,7 @@
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary" data-dismiss="modal" id="save-material" class="hidden">SAVEY JONES LOCKER</button>
+    <button class="btn btn-primary" data-dismiss="modal" id="save-material" class="hidden">Save</button>
   </div>
 </div>
     <input type='text' id="training-materials"/>
