--- a/ckanext/tess/templates/package/resource_read.html
+++ b/ckanext/tess/templates/package/resource_read.html
@@ -61,7 +61,7 @@
         </div>
         {% block resource_content %}
           {% block resource_read_title %}
-          <h1 class="page-heading"> {{ res.title }}</h1>
+          <h1 class="page-heading"> {{ res.name }}</h1>
           {% endblock %}
           {% block resource_read_url %}
             {% if res.url and h.is_url(res.url) %}
@@ -117,6 +117,10 @@
               <tr>
                 <th scope="row">{{ _('Format') }}</th>
                 <td>{{ res.mimetype_inner or res.mimetype or res.format or _('unknown') }}</td>
+              </tr>
+              <tr>
+                <th scope="row">Image URL</th>
+                <td>{{ h.format_resource_items(res.image_url) or 'None' }}</td>
               </tr>
               <tr>
                 <th scope="row">{{ _('License') }}</th>
