Improved modal layout and information for read and edit modes

--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -27,7 +27,7 @@
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="zindex:15">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Training Materials</h3>
+    <h3 id="myModalLabel">Training Materials for <em class="modal-workflow-title"></em></h3>
   </div>
   <div class="modal-body">
   </div>
@@ -36,7 +36,8 @@
     <button class="btn btn-primary" data-dismiss="modal" id="save-material" class="hidden">Save</button>
   </div>
 </div>
-    <input type='text' id="training-materials"/>
+
+<input type='text' id="node-info" class="hidden"/>
 
 
 <script>
