--- a/ckanext/tess/templates/workflow/ajax/read_training.html
+++ b/ckanext/tess/templates/workflow/ajax/read_training.html
@@ -32,6 +32,6 @@ $('#myModal').on('show', function(e){
     <h3>Description</h3>
     <div class="modal-workflow-description empty">No description set</div>
     <h3>Training Materials for '<span class="modal-workflow-title"></span>'</h3>
-    <table id="workflow-materials"></table>
+    <table class='table' id="workflow-materials"></table>
 </div>
 
