--- a/ckanext/tess/templates/workflow/ajax/read_training.html
+++ b/ckanext/tess/templates/workflow/ajax/read_training.html
@@ -1,31 +1,36 @@
 <script>
-$('#myModal').on('show', function(e){
-    if (action=='show'){
-        $('#workflow-materials').empty();
-        $('#save-material').addClass('hidden');
-        var node = $.parseJSON($('#node-info').val());
-        console.log(node)
-        if (node.name)          { $('.modal-workflow-title').text(node.name);}
-        else                    { $('.modal-workflow-title').text('Unnamed Node'); }
-        if (node.description)   { $('.modal-workflow-description').text(node.description);
-                                  $('.modal-workflow-description').removeClass('empty') }
-        else                    { $('.modal-workflow-description').text('There is no description for this workflow stage');
-                                  $('.modal-workflow-description').addClass('empty') }
+    function populateModal() {
+        if (action=='show'){
+            $('#workflow-materials').empty();
+            $('#save-material').addClass('hidden');
+            var node = $.parseJSON($('#node-info').val());
+            console.log(node)
+            if (node.name)          { $('.modal-workflow-title').text(node.name);}
+            else                    { $('.modal-workflow-title').text('Unnamed Node'); }
+            if (node.description)   { $('.modal-workflow-description').text(node.description);
+                                      $('.modal-workflow-description').removeClass('empty') }
+            else                    { $('.modal-workflow-description').text('There is no description for this workflow stage');
+                                      $('.modal-workflow-description').addClass('empty') }
 
-        if (node.materials != undefined && node.materials.constructor === Array && node.materials.length > 0) {
-            $.each(node.materials, function (index, material) {
-                var row = '<tr>';
-                row += '<td><a href="/package/' + material['id'] + '">' + material['name'] + '</a></td>';
-                row += '</tr>';
-                $('#workflow-materials').append(row);
-            });
+            if (node.materials != undefined && node.materials.constructor === Array && node.materials.length > 0) {
+                $.each(node.materials, function (index, material) {
+                    var row = '<tr>';
+                    row += '<td><a href="/package/' + material['id'] + '">' + material['name'] + '</a></td>';
+                    row += '</tr>';
+                    $('#workflow-materials').append(row);
+                });
+            } else {
+                $('#workflow-materials').html('<div class="empty">There are no associated materials with this workflow stage.</div>');
+            }
         } else {
-            $('#workflow-materials').html('<div class="empty">There are no associated materials with this workflow stage.</div>');
+            $('#save-material').removeClass('hidden');
         }
-    } else {
-        $('#save-material').removeClass('hidden');
     }
-});
+    $('#myModal').on('show', function(e){
+        populateModal();
+    });
+
+    populateModal();
 </script>
 
 <div>
