Constistent title layouts on read modal

--- a/ckanext/tess/templates/workflow/ajax/read_training.html
+++ b/ckanext/tess/templates/workflow/ajax/read_training.html
@@ -36,7 +36,7 @@
 <div>
     <h3>Description</h3>
     <div class="modal-workflow-description empty">No description set</div>
-    <h3>Training Materials for '<span class="modal-workflow-title"></span>'</h3>
+    <h3>Training Materials for <em class="modal-workflow-title"></em></h3>
     <table class='table' id="workflow-materials"></table>
 </div>
 
