--- a/ckanext/tess/templates/package/resource_read.html
+++ b/ckanext/tess/templates/package/resource_read.html
@@ -69,6 +69,9 @@
             {% elif res.url %}
               <p class="muted ellipsis">{{ _('URL:') }} {{ res.url }}</p>
             {% endif %}
+            {% if res.image_url %}
+               <p> <img src="{{ res.image_url }}" alt="custom image" style="padding: 10px; max-height: 150px;"> </p>
+           {% endif %}
           {% endblock %}
           <div class="prose notes" property="rdfs:label">
             {% if res.description %}
@@ -98,6 +101,7 @@
         {% block resource_additional_information_inner %}
         <div class="module-content">
           <h2>{{ _('Details') }}</h2>
+
           <table class="table table-striped table-bordered table-condensed" data-module="table-toggle-more">
             <thead>
               <tr>
