--- a/ckanext/tess/templates/package/snippets/resource_item.html
+++ b/ckanext/tess/templates/package/snippets/resource_item.html
@@ -5,7 +5,16 @@
 <li class="resource-item" data-id="{{ res.id }}">
   {% block resource_item_title %}
   <a class="heading" href="{{ url }}" title="{{ res.name or res.description }}">
-    {{ h.resource_display_name(res) | truncate(50) }}<span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ res.format }}</span>
+    {{ h.resource_display_name(res) | truncate(50) }}
+      {% if res.image_url %}
+          <div style="position: absolute; top: 10px; left: 10px; padding; 2px;">
+          <img src="{{ res.image_url }}" style="max-width: 38px;">
+          </div>
+      {% else %}
+      <span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">
+          {{ res.format }}
+      </span>
+      {% endif %}
     {{ h.popular('views', res.tracking_summary.total, min=10) }}
   </a>
   {% endblock %}
