--- a/ckanext/tess/templates/workflow/read.html
+++ b/ckanext/tess/templates/workflow/read.html
@@ -1,52 +1,11 @@
-{% extends "page.html" %}
-
-{% block subtitle %}{{ c.workflow_dict.name }} - {{ _('Workflows') }}{% endblock %}
+{% extends "workflow/read_base.html" %}
 
 {% block breadcrumb_content %}
   <li>{% link_for _('Workflows'), controller='ckanext.tess.workflow:WorkflowController', action='index' %}</li>
   <li class="active">{% link_for c.workflow_dict.name|truncate(35), controller='ckanext.tess.workflow:WorkflowController', action='read', id=c.workflow_dict.id %}</li>
 {% endblock %}
 
-{% block content_action %}
-  {% if h.check_access('workflow_update', {'id': c.workflow_dict.id}) %}
-    {% link_for _('Manage'), controller='ckanext.tess.workflow:WorkflowController', action='update', id=c.workflow_dict.id, class_='btn', icon='wrench' %}
-  {% endif %}
-{% endblock %}
-
-{% block content_primary_nav %}
-  {{ h.build_nav_icon('workflow_read', _('Workflow'), id=c.workflow_dict.name) }}
-  {{ h.build_nav_icon('workflow_materials', _('Training materials'), id=c.workflow_dict.name, offset=0) }}
-  {{ h.build_nav_icon('workflow_activities', _('Activity log'), id=c.workflow_dict.name, offset=0) }}
-{% endblock %}
-
-
 {% block primary_content_inner %}
     {% snippet "workflow/snippets/display_workflow.html", workflow=c.workflow_dict.definition, action='show' %}
 {% endblock %}
 
-{% block secondary_content %}
-    <div class="module module-narrow module-shallow context-info">
-        <section class="module-content">
-    {% block heading %}
-         <h1 class="heading">{{c.workflow_dict.name}}</h1>
-    {% endblock %}
-    {% if c.workflow_dict.description %}
-        <p>{{ h.markdown_extract(c.workflow_dict.description, 180) }}</p>
-    {% else %}
-        <p class="empty">{{ _('There is no description for this workflow') }}</p>
-    {% endif %}
-            <br><br><br>
-            {% set user = c.workflow_dict.creator %}
-            {% if user %}
-               <p>Author: {{ h.link_to(user.fullname, h.url_for(controller='user', action='read', id=user.name)) }}</p>
-            {% endif %}
-            {% if c.workflow_dict.created %}
-                <p>Date created: {{ h.render_datetime(c.workflow_dict.created) }}</p>
-            {% endif %}
-            {% if c.workflow_dict.last_modified and h.render_datetime(c.workflow_dict.last_modified) != h.render_datetime(c.workflow_dict.created) %}
-                <p>Last Modified: {{ h.render_datetime(c.workflow_dict.last_modified) }}</p>
-            {% endif %}
-
-        </section>
-    </div>
-{% endblock %}
