Added colour picker to workflow stage editor

--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -12,6 +12,9 @@
 <link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
 <link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<!--                <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js"></script>-->
+{% resource 'tess/simplecolorpicker.js' %}<!--<script src="jquery.simplecolorpicker.js"></script>-->
+{% resource 'tess/simplecolorpicker.css' %}<!--<link rel="stylesheet" href="jquery.simplecolorpicker.css">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
 <div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
