--- a/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
@@ -1,6 +1,22 @@
 
 {% import 'macros/form.html' as form %}
 
+    {% set colour_list = [
+    {'value':'#ac725e'},{'value':'#d06b64'},
+    {'value':'#f83a22'},{'value':'#fa573c'},
+    {'value':'#ff7537'},{'value':'#ffad46'},
+    {'value':'#42d692'},{'value':'#16a765'},
+    {'value':'#7bd148'},{'value':'#b3dc6c'},
+    {'value':'#fbe983'},{'value':'#fad165'},
+    {'value':'#92e1c0'},{'value':'#9fe1e7'},
+    {'value':'#9fc6e7'},{'value':'#4986e7'},
+    {'value':'#9a9cff'},{'value':'#b99aff'},
+    {'value':'#c2c2c2'},{'value':'#cabdbf'},
+    {'value':'#cca6ac'},{'value':'#f691b2'},
+    {'value':'#cd74e6'},{'value':'#a47ae2'}
+    ] %}
+
+
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
         <i class="icon-edit-sign"></i>
@@ -16,10 +32,10 @@
             <div>
             {{ form.input('title', label=_('Name'), id='element-name', placeholder=_('Element name'), classes=['control-full margin-bottom-0']) }}
             {{ form.textarea('description', label=_('Description'), id='element-description', placeholder=_('Short description (max 5 sentences)'), classes=['control-full margin-bottom-0']) }}
-            {{ form.input('color', label=_('Colour'), id='element-color', placeholder=_('#FE23A9 or Yellow'), classes=['control-full margin-bottom-0']) }}
-            {{ form.select('topic', label=_('Topic'), id='element-topic', options=[{'value':'Topic 1'},{'value':'Topic 2'},{'value':'Topic 3'}], selected='Topic 1', classes=['control-full']) }}
+            {{ form.select('colorpicker-longlist', label=_('Colour'), id='colorpicker-longlist', options=colour_list, classes=['control-full']) }}
+            {#{ form.select('topic', label=_('Topic'), id='element-topic', options=[{'value':'Topic 1'},{'value':'Topic 2'},{'value':'Topic 3'}], selected='Topic 1', classes=['control-full']) }#}
+                <span id="associate-training-materials"><i class="icon-book"></i> Associate Material </span>
         </div>
-            <button class="btn btn-primary pull-left" id="associate-training-materials" type="submit" style="margin-top: 10px;"><i class="icon-book"></i> Associate Material</button>
             <button class="btn btn-primary pull-left" id="save_workflow_element_properties" type="submit" style="margin-top: 10px;"><i class="icon-save"></i> Apply</button>
         </div>
     </div>
