--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -562,6 +562,24 @@ hr.style-one {
     height: 500px;
 }
 
+.export-box{
+    background: rgb(244, 244, 244);
+    width: 70%;
+    padding: 10px;
+    margin: 10px auto;
+}
+
+.export-options-heading {
+    font-weight: bold;
+    max-width: 130px;
+    margin: 0 auto 10px;
+}
+
+.export-options {
+    font-weight: normal;
+    max-width: 360px;
+    margin: 0 auto;
+}
 
 .training-material-info{
   margin: 10px 10px -20px 0px;
