--- a/ckanext/tess/templates/workflow/snippets/export_options.html
+++ b/ckanext/tess/templates/workflow/snippets/export_options.html
@@ -1,17 +1,14 @@
-<div style="margin-bottom: 10px;">
+<div class="export-box">
+    <div class="export-options-heading">
+        <h3 class="heading">Export Options</h3>
+    </div>
+    <div class="export-options">
+        <button class="btn btn-default" id='download-png-workflow' name="download-png" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i>PNG</button>
+        <button class="btn btn-default" id='download-ro-workflow' name="download-png" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i>Research Object</button>
+        <button class="btn btn-default" id='download-json-workflow' name="download-json" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i>JSON</button>
+    </div>
+</div>
 
-    <div class="export-box">
-        <div class="export-options-heading">
-            Export Options
-        </div>
-        <div class="export-options">
-            <button class="btn btn-default" id='download-png-workflow' name="download-png" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i>PNG</button>
-            <button class="btn btn-default" id='download-ro-workflow' name="download-png" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i>Research Object</button>
-            <button class="btn btn-default" id='download-json-workflow' name="download-json" type="submit" style="margin: 0px 5px;"><i class="icon-download"></i>JSON</button>
-        </div>
-    </div>
-    </div>
-    <span><br>&nbsp;</span>
 
 <div id="export" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="zindex:15">
   <div class="modal-header">
