--- a/ckanext/tess/templates/workflow/training_materials.html
+++ b/ckanext/tess/templates/workflow/training_materials.html
@@ -5,21 +5,28 @@
   <li class="active">{% link_for c.workflow_dict.name|truncate(35), controller='ckanext.tess.workflow:WorkflowController', action='display_workflow_materials', id=c.workflow_dict.id %}</li>
 {% endblock %}
 
-{% block primary_content_inner %}
+{% block show_specific %}
+    <div class="workflow-training-materials-display">
+    <h3 class="heading">Training Materials for {{c.workflow_dict.name}}</h3>
 
     {% for material in c.node_materials %}
-        <h3 class="heading">{{ material.get('name') }}</h3>
-        {% if material.get('description') %}
-            <p> {{ material.get('description') }}</p>
-        {% endif %}
-        {% if material.get('materials'): %}
-            <ul>
-                {% for m in material.get('materials') %}
-                    <li>{% link_for m.get('name'), controller='package', action='read', id=m.get('id') %}<br></li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <span class="empty"> No training materials are associated with this training workflow stage </span>
+        {% if material.get('name') %}
+            <div class="workflow-training-material-display">
+                <h4 class="heading">{{ material.get('name') }}</h4>
+                {% if material.get('description') %}
+                    <p> {{ material.get('description') }}</p>
+                {% endif %}
+                {% if material.get('materials'): %}
+                    <ul>
+                        {% for m in material.get('materials') %}
+                            <li>{% link_for m.get('name'), controller='package', action='read', id=m.get('id') %}<br></li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <span class="empty"> No training materials are associated with this training workflow stage </span>
+                {% endif %}
+            </div>
         {% endif %}
     {% endfor %}
+    </div>
 {% endblock %}
