--- a/ckanext/tess/templates/workflow/read_base.html
+++ b/ckanext/tess/templates/workflow/read_base.html
@@ -7,7 +7,7 @@
     <header class="module-content page-header">
         <div class="content_action">
             {% if h.check_access('workflow_update', {'id': c.workflow_dict.id}) %}
-                {% link_for _('Manage'), controller='ckanext.tess.workflow:WorkflowController', action='update', id=c.workflow_dict.id, class_='btn', icon='wrench' %}
+                {% link_for _('Edit'), controller='ckanext.tess.workflow:WorkflowController', action='update', id=c.workflow_dict.id, class_='btn', icon='pencil' %}
             {% endif %}
         </div>
         <ul class="nav nav-tabs">
